src/test/resources/frontendReference/invalid/semanticErr/pairs/fstNull.waccast
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 12:10 -- accessing element of a null pair
